<resources>
    <string name="app_name">toulouse-0218-java-wildshare</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_item_s_name">New item\'s name</string>
    <string name="description">Description</string>
    <string name="button">Add item</string>
    <string name="enter_pseudo_password">Please enter your Pseudo and Password</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="link">Link</string>
    <string name="image_link">Image Link</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="create_new_account">create new account</string>
    <string name="pseudo">Pseudo</string>
    <string name="enter_both_values">Enter both values</string>
    <string name="account_create">Account create</string>
    <string name="pseudo_missed">Enter a pseudo</string>
    <string name="enter_your_pseudo">Enter your pseudo</string>
    <string name="valid_modifications">Valid modifications</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="friend">Friend</string>
    <string name="add_friends">Add Friends</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="item_s_name">Item\'s name</string>
    <string name="item_s_description">Item\'s description</string>
    <string name="pseudo_doesnt_exists">%s doesn\'t exists</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="share_my_list">Share my list</string>
    <string name="item_infos">Infos Item</string>
    <string name="my_list">My List</string>
    <string name="items_borrowed">Items borrowed</string>
    <string name="friend_items">Friend Items</string>
    <string name="my_friends">My Friends</string>
    <string name="password_length">Your password must contain at least six characters</string>
    <string name="item_already_borrowed">This item has already been borrowed</string>
</resources>
