<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wildcodeschool.wildshare.AddItem">

    <EditText
        android:id="@+id/et_newItemName"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_item_s_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_gallery" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newItemName" />

    <ImageView

        android:id="@+id/imageView_choose"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_url"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/image_link"
        android:inputType="textUri"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_valid"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        app:srcCompat="@drawable/buton_valid" />

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="104dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        app:srcCompat="@drawable/button_annuler" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_choose"
        app:srcCompat="@drawable/picture_button" />

    <ImageView
        android:id="@+id/iv_url"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_choose"
        app:srcCompat="@drawable/button_url" />

    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_url"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/iv_camera"
        app:layout_constraintTop_toBottomOf="@+id/imageView_choose"
        app:srcCompat="@drawable/gallery_button" />

    <ImageView
        android:id="@+id/iv_validUrl"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/et_url"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buton_valid" />

</android.support.constraint.ConstraintLayout>
